--- a/japan/css/style.css
+++ b/japan/css/style.css
@@ -397,7 +397,7 @@ button {
     bottom: 0;
     text-align: center;
     opacity: 0;
-    z-index: 100;
+    z-index: 10;
     -webkit-transform: translate3d(0, 100px, 0);
             transform: translate3d(0, 100px, 0); }
     .slider-section .dots .dot {
